<!--
Copyright(c) 2012 Anitha Suryanarayan 

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <http://www.gnu.org/licenses/>.

Author: Anitha Suryanarayan
feedback: anitha@pdx.edu
-->

<resources>

    <string name="app_name">DigiAssist</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_digi_assist">DigiAssistActivity</string>
    <string name="add_reminder">Add Medication Reminder</string>
    <string name="title_activity_add_reminder">AddReminderActivity</string>
    <string name="medication_name">Medicine Name</string>
    <string name="medication_dosage">Dosage</string>
    <string name="hint_medication_time">Enter the time when medication should be taken.</string>
    <string name="hint_medication_dosage">Enter the prescribed dosage.</string>
    <string name="medication_frequency">Repeat Every</string>
    <string name="medication_start_date">Start Date</string>
    <string name="medication_end_date">End Date</string>
    <string name="medication_start_time">Start Time</string>
    <string name="medication_end_time">End Time</string>
    <string name="select">For more info, click on the Drug Name</string>
    <string name="view_reminders">View Medication Reminders</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="list_medication">List All Current Medication Details</string>
    <string name="symptoms">Symptoms</string>
    <string name="selectSymptoms">Select all that apply</string>
    <string name="cough">Cough</string>
    <string name="soreThroat">Sore Throat</string>
    <string name="nasalCongestion">Nasal Congestion</string>
    <string name="sneezing">Sneezing</string>
    <string name="nausea">Nausea</string>
    <string name="headache">Headache</string>
    <string name="dizzy">Dizziness</string>
    <string name="fever">Fever</string>
    <string name="runny_nose">Runny nose</string>
    <string name="allergicReaction">Allergic Reaction</string>
    <string name="diarrhea">Diarrhea</string>
    <string name="depressed">Depressed</string>
    <string name="weightLoss">Weight Loss</string>
    <string name="weightGain">Weight Gain</string>
    <string name="other">Other</string>
    <string name="details">More Details</string>
    <string name="sendToDoc2">Send to my doctor</string>
    <string name="view_label_medicine">Medicine:</string>
    <string name="view_label_dosage">Dosage:</string>
    <string name="view_label_start">Time:</string>
    <string name="view_label_end">End Time:</string>
    <string name="view_label_recurrence">Recurrence:</string>
    <string name="view_label_delete">Delete</string>
    <string name="label_reminder">Reminder</string>
    <string name="dismiss">Dismiss</string>
    <string name="time_for_med">Time for your medicine</string>
    <string name="dosage_is">The dosage is</string>
    <string name="viewLog">View Log</string>
    <string name="pills_remaining">Pills Remaining:</string>
    <string name="refill_required">Refill Required:</string>
    <string name="yes">Yes</string>
    
    
    <string-array name="medication_frequency_num">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string name="medication_frequency_num_prompt">1</string>

    <string-array name="medication_frequency_unit">
        <item>Hours</item>
        <item>Days</item>
        <item>Weeks</item>
    </string-array>

    <string name="medication_frequency_unit_prompt">Days</string>
    <string name="title_activity_lsit_medication">List Medication Details</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_view_calendar">View Todays Medication Calendar</string>
    <string name="title_activity_send_symptoms">Send Symptoms To Doctor</string>
    <string name="title_activity_medication_supply">Medication Supplies</string>
    <string name="medication_supplies">Medication Supplies</string>
    <string name="settings">DigiAssist Settings</string>
    <string name="help">Help</string>
    <string name="medication_log">Medication Log</string>
    <string name="title_activity_medication_log">Medication Log</string>
    <string name="title_activity_digi_assist_settings">Settings</string>
    <string name="title_activity_digi_assist_help">Help</string>
    <string name="sendEmailToDoc">Send Email To My Doctor</string>
    <string name="otherDetails">Details</string>
    <string name="pulse_rate">Pulse Rate : </string>
    <string name="pain_level">Pain Level : </string>
    <string name="resp_rate">Respiratory Rate : </string>
    <string name="blood_pressure">Blood Pressure : </string>
    <string name="oxygen_saturation">Oxygen Saturation : </string>
    <string name="blood_glucose">Blood Glucose : </string>
    <string name="body_temp">Temperature : </string>
    <string name="title_activity_alarm_receiver">AlarmReceiverActivity</string>

</resources>