<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollview"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/labelAddReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/add_reminder"
        android:text="@string/add_reminder"
        android:textSize="@dimen/padding_large" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/labelAddReminder"
        android:layout_marginTop="23dp"
        android:text="@string/medication_name" />

    <EditText
        android:id="@+id/textMedicationName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView1"
        android:layout_marginLeft="27dp"
        android:layout_toRightOf="@+id/textView1"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="31dp"
        android:text="@string/medication_dosage" />

    <EditText
        android:id="@+id/textMedicationDosage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/textMedicationName"
        android:ems="10"
        android:inputType="text|number" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textMedicationDosage"
        android:layout_marginTop="42dp"
        android:text="@string/medication_start_date" />

    <DatePicker
        android:id="@+id/startDatePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textMedicationDosage"
        android:layout_alignTop="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:paddingTop="20dp"
        android:layout_below="@+id/startDatePicker"
        android:text="@string/medication_start_time" />

    <TimePicker
        android:id="@+id/startTimePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/startDatePicker"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView4"
        android:paddingTop="20dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/startTimePicker"
        android:layout_marginTop="42dp"
        android:text="@string/medication_end_date" />

    <DatePicker
        android:id="@+id/endDatePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/startTimePicker"
        android:layout_alignTop="@+id/textView5" />
    
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:paddingTop="20dp"
        android:layout_below="@+id/endDatePicker"
        android:text="@string/medication_end_time" />

    <TimePicker
        android:id="@+id/endTimePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignLeft="@+id/endDatePicker"
        android:paddingTop="20dp"
        android:layout_alignTop="@+id/textView6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:paddingTop="20dp"
        android:layout_below="@+id/endTimePicker"
        android:text="@string/medication_frequency" />

	<Spinner
        android:id="@+id/spinnerRepeatNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView7"
        android:layout_alignLeft="@+id/endTimePicker"
        android:paddingTop="40dp"
        android:entries="@array/medication_frequency_num"
        android:prompt="@string/medication_frequency_num_prompt" />
    
	<Spinner
        android:id="@+id/spinnerRepeatUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView7"
        android:layout_toRightOf="@+id/spinnerRepeatNum"
        android:paddingTop="40dp"
        android:entries="@array/medication_frequency_unit"
        android:prompt="@string/medication_frequency_unit_prompt" />
	
	<Button 
	  	android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinnerRepeatUnit"
        
        android:layout_alignLeft="@+id/endTimePicker"
        android:paddingTop="40dp"
        android:text="@string/save"
        android:onClick="saveReminder" />
        
	
	<Button 
	  	android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonSave"
        android:layout_toRightOf="@+id/buttonSave"
        android:paddingTop="40dp"
        android:text="@string/cancel"
        android:onClick="refreshScreen" />
        
</RelativeLayout>
</ScrollView>